Merge OSS/Polaris main  (#36)
* Generify MetaStoreManagerFactory.getOrCreateSessionSupplier (#1173)

No functional change.

* Adjust the type parameter to the Persistence supplier to
  cover all possible implementation types.

* Remove unnecessary fields from IcebergCatalogAdapter

* Adjust types at call sites of `getOrCreateSessionSupplier`.

* [Enhancement] Refactor Cleanup Task Handler (#516)

* refactor cleanup task handler

* format

* make base class abstract

* make cleanup task record

* simplify logger

* update test after merge

* update task handler register after merge

* fix test error after merge

* refine call context and ut after merge

* fix ci error (#1174)

* main: Update dependency org.junit:junit-bom to v5.12.1 (#1177)

* Publish 0.9.0 documentation (#1175)

* main: Update dependency gradle to v8.13 (#1063)

* main: Update dependency gradle to v8.13

* Adopt build-scripts to Gradle changes

See https://docs.gradle.org/8.13/userguide/upgrading_version_8.html#changes_to_jvmtestsuite

---------

Co-authored-by: Robert Stupp <snazy@snazy.de>

* Remove jetbrains-annotations (#1176)

The main intention of this change is to avoid confusion between
Jetbrains' `@NotNull` and Jakarta's `@Nonnull` (the latter
is standard in the Polaris codebase).

As a side effect `@Contract` is no longer available. However,
its value is realised only in tools that support it and Polaris
builds do not rely on it for producing artifacts. For a human
being the value of `@Contract` appears to be negligible compared
to javadoc. Therefore, in the interest of keeping annotation
dependencies concise, `@Contract` lines are removed.

Jetbrains' `@VisibleForTesting` is converted to the same
annotation from Guava (which is also standard in the Polaris
codebase).

* main: Update dependency com.google.cloud:google-cloud-storage-bom to v2.50.0 (#1178)

* Isolate Persistence objects in different threads. (#1166)

* Simplify PolarisGrantManager (#1171)

* Simplify PolarisGrantManager

Pre